[project]
name = "local_openai"
version = "1.1.0"
description = "Home Assistant integration for the Gemini-FastAPI and any OpenAI-compatible services"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "homeassistant>=2026.4.0",
  "demoji",
  "openai",
  "pylatexenc",
  "webcolors",
  "ruff",
  "ty",
  "pytest",
  "pytest-asyncio",
]

[project.urls]
Repository = "https://github.com/luuquangvu/hass_local_openai_llm"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
  "TID", # flake8-tidy-imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
